2011-10-23  Pau Garcia i Quiles  <paugq@users.sourceforge.net>

	* time.h: Make sure to use 64bit time functions for lfs.
	* _mingw.h.in: Likewise.

2011-10-13  Jonathan Yong  <jon_y@users.sourceforge.net>

	* sys/stat.h: Make fstat use 64bit offset for lfs.

2011-10-12  Jonathan Yong  <jon_y@users.sourceforge.net>

	* sys/stat.h: Make stat use 64bit offset for lfs.

2011-10-02  Ruben Van Boxem  <vanboxem.ruben@gmail.com>
	    Ozkan Sezer  <sezeroz@gmail.com>

	* stdint.h: Add C++11 guards by checking for __GXX_EXPERIMENTAL_CXX0X__
	and __cplusplus >= 201103L.

2011-09-28  Ozkan Sezer  <sezeroz@gmail.com>

	* uchar.h: Along with __cplusplus, check for __GXX_EXPERIMENTAL_CXX0X__
	before defining char16_t and char32_t types.

2011-09-28  Ozkan Sezer  <sezeroz@gmail.com>

	* uchar.h: Add extern "C" guards.

2011-09-27  Ruben Van Boxem  <vanboxem.ruben@gmail.com>
	    Ozkan Sezer  <sezeroz@gmail.com>

	* uchar.h: New header, initial implementation of uchar.h.

2011-09-26  Ozkan Sezer  <sezeroz@gmail.com>

	* errno.h (EOVERFLOW): Remove.

2011-09-21  Ozkan Sezer  <sezeroz@gmail.com>

	* _timeval.h (timercmp): Added missing parens around the AND
	condition.

2011-09-17  Jonathan Yong  <jon_y@users.sourceforge.net>

	* pthread_time.h: New dummy header.
	* time.h: Include dummy header to support winpthreads.

2011-09-12  Jonathan Yong  <jon_y@users.sourceforge.net>

	* errno.h (EOVERFLOW): Fix typo, use EFBIG.

2011-08-22  Jonathan Yong  <jon_y@users.sourceforge.net>

	* _mingw.h.in (__forceinline): Fix for C99 case and check for
	C++ mode.

2011-08-09  Jonathan Yong  <jon_y@users.sourceforge.net>

	* stdio.h (__mingw_asprintf): New.
	(__mingw_vasprintf): New.
	* _mingw_print_pop.h, _mingw_print_push.h: New macros to handle
	asprintf and vasprintf.

2011-08-07  Ozkan Sezer  <sezeroz@gmail.com>

	* sec_api/string_s.h: Added prototypes for wcscpy_s() and wcscat_s()
	after tracker item #3295337.

2011-07-23  Ozkan Sezer  <sezeroz@gmail.com>
